[project]
name = "bot-telegram-3d"
version = "1.0.0"
description = "Bot Telegram para afiliados AliExpress com sorteios e impressão 3D"
requires-python = ">=3.11"
dependencies = [
    "pyTelegramBotAPI==4.21.0",
    "google-genai==0.3.0",
    "schedule==1.2.2",
    "feedparser==6.0.11",
    "requests==2.31.0",
    "flask==3.0.0",
    "gunicorn==21.2.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
